Refactor to remove depricated integer method